--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
 #                                #
 ##################################
 
-logo: /images/isomer-logo.svg
+logo: /images/mpalogo.PNG
 
 links:
   - title: Contact Us
