--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 contact_us: /contact-us/
 show_reach: true
 social_media:
-    facebook: https://www.instagram.com/maritime_sg/
+    facebook: https://www.facebook.com/MPA.SG/
     instagram: https://www.instagram.com/maritime_sg/
     linkedin: https://www.linkedin.com/company/mpasingapore/
