migrate: modifying collections, image, and file structure

--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,13 @@ custom_print_css_path: "/assets/css/print.css"
 paginate: 12
 remote_theme: isomerpages/isomerpages-template@next-gen
 safe: false
+description: test test
+
+staging: https://mpa-do-staging.netlify.app
+prod: https://mpa-do-prod.netlify.app
 plugins:
   - jekyll-feed
   - jekyll-assets
   - jekyll-paginate
   - jekyll-sitemap
-description: test test
-
+  - jekyll-remote-theme
