--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,8 @@
-##################################
-#                                #
-# Feel free to edit this file :) #
-#                                #
-##################################
-
 logo: /images/mpalogo.JPG
-
 links:
   - title: Contact Us
     url: /contact-us/
   - title: About
     url: /about/
+  - title: Media
+    url: /media
