--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,12 +9,12 @@ links:
         url: /events
       - title: Blog
         url: /blog
-  - title: Developers
-    url: /developers
+  - title: Our API
+    url: /resources
     sublinks:
+      - title: Getting Started
+        url: /getting-started
       - title: Documentation
         url: /documentation
-      - title: API Reference Index
-        url: /permalink
   - title: Contact Us
     url: /contact-us/
