--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ links:
     sublinks:
       - title: Getting Started
         url: /getting-started
-      - title: API Documentation
+      - title: Documentation
         url: /documentation
       - title: Tools and Libraries
         url: /tools-libraries
