--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,6 @@ links:
     resource_room: true
     sublinks:
       - title: API Documentation
-        url: /api-documentation
+        url: /Resources/api-documentation
   - title: Contact Us
     url: /contact-us/
