--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,7 @@ links:
       - title: Blog
         url: /blog
   - title: Resources
+    resource room: true
     sublinks:
       - title: API Documentation
         url: /resources/api-documentation
