--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,7 @@ links:
   - title: Our Api
     collection: our-api
   - title: Media
+    url: /media/
     resource_room: true
   - title: Contact Us
     url: /contact-us/
