--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     url: /about/
   - title: Our API
     collection: our-api
-  - title: Media
-    url: /Resources
+  - title: Media Centre
+    url: /permalink
   - title: Contact Us
     url: /contact-us/
