--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ links:
   - title: Our API
     collection: our-api
   - title: Media Centre
-    url: /permalink
+    url: /Resources
   - title: Contact Us
     url: /contact-us/
