--- a/_config.yml
+++ b/_config.yml
@@ -52,4 +52,4 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-remote-theme
-resources_name: Resources
+resources_name: Media-centre
