--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: digitalOCEANS™
 url: ""
 favicon: /images/mpalogo.JPG
 colors:
-  primary-color: "#01899f"
+  primary-color: "#0065bd"
   secondary-color: "#009b74"
   media-colors:
     - title: media-color-one
