--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: digitalOCEANS™
-url: ""
+url: "https://digitaloceans.mpa.gov.sg/"
 favicon: /images/mpalogo.JPG
 colors:
   primary-color: "#0065bd"
